Font Awesome Lib

--- a/modules/app-basic-test/source/index.html
+++ b/modules/app-basic-test/source/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+  <i class="fa fa-thermometer-empty" aria-hidden="true"></i>
   <div class="box" ui-view>Loading...</div>
   
   
